syntax = "proto3";

package finance;

service Finance {
    //充值服务
    rpc Recharge (RechargeInfo) returns (Result);

    //查询充值记录
    rpc QueryMoney (User) returns (Money);
}

//用户
message User {
    string name = 1;
}

//充值
message RechargeInfo {
    User user = 1;
    int64 money = 2;
}

//余额
message Money {
    User user = 1;
    int64 money = 2;
}

//结果
message Result {
    string result = 1;
    RechargeInfo recharge_info = 2;
}